# daisy

./: .gitignore  CMakeLists.txt
sources/: CMakeLists.txt  js_support.cpp  js_support.h  jsnexus.cpp  jsnexus.h  logadapter.cpp  logadapter.h  main.cpp  standalonexhost.cpp  standalonexhost.h  xhostinterface.cpp  xhostinterface.h
sources/jsnexus/: jsnexus.cpp  jsnexus.h  xpdataaccess.cpp  xpdataaccess.h
